--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,13 @@
     padding: 0;
     margin: 0;
 }
-
 body {
     background-color: #d9dcd6;
 }
 
+.aboutme {
+
+}
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -58,6 +60,21 @@ p {
     background-position: center;
 }
 
+img.large {
+    width: 500px;
+    height: 500px;
+}
+
+img.medium {
+    width: 125px;
+    height: 125px;
+}
+
+img.small {
+    width: 85px;
+    height: 85px;
+}
+
 .float-left {
     float: left;
     margin-right: 25px;
@@ -86,3 +103,4 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+
