--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,9 +12,9 @@ body {
 }
 .header {
     padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family:'Trebuchet MS','Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #0a3d11;
-    color: #ffffff;
+    color: #f2ee07;
 }
 
 .header h1 {
@@ -42,10 +42,13 @@ body {
 }
 
 a {
-    color: #ffffff;
+    color: #4ee90c;
     text-decoration: none;
 }
-
+ b {
+    color: black ;
+    text-decoration: none;
+ }
 p {
     font-size: 16px;
 }
